// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`this test for one expense 1`] = `
<h1>
  Viewing 
  1 expense
    totalling 
  $195.00
</h1>
`;

exports[`this test for three expenses 1`] = `
<h1>
  Viewing 
  3 expenses
    totalling 
  $5,790.00
</h1>
`;

exports[`this test if the component renders 1`] = `
<h1>
  Viewing 
  0 expenses
    totalling 
  $0.00
</h1>
`;
